--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Pause",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="DEBUGdisableAI",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="Attack Secondary",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="Move Forward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Right/Left",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Look Up/Down",Scale=-1.000000,Key=MouseY)
