--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/Prototyping/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/Levels/MainLevel.MainLevel
+GameInstanceClass=/Game/Blueprints/Game/BP_ZomGameInstance.BP_ZomGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -19,6 +20,8 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.DefaultFeature.AutoExposure.Bias=5.000000
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
