--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,5 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Main_Menu.Main_Menu
+GameDefaultMap=/Game/Levels/SplashScreen.SplashScreen
 GlobalDefaultGameMode=/Game/Prototyping/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/Levels/MainLevel.MainLevel
 GameInstanceClass=/Game/Blueprints/Game/BP_ZomGameInstance.BP_ZomGameInstance_C
@@ -18,7 +16,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.Bias=5.000000
 r.DefaultFeature.AutoExposure=False
@@ -135,5 +133,5 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/NavigationSystem.RecastNavMesh]
-RuntimeGeneration=Dynamic
+RuntimeGeneration=Static
 
